[gd_scene load_steps=11 format=3 uid="uid://db4i6ehyxfhi6"]

[ext_resource type="Script" uid="uid://u5a6y352fgjt" path="res://scripts/plant_room/handbook/handbook.gd" id="1_805rs"]
[ext_resource type="Texture2D" uid="uid://bg0o1bk0uxvbu" path="res://sprites/handbook/handbook_bg.png" id="2_805rs"]
[ext_resource type="FontFile" uid="uid://r03ahpnkx0kh" path="res://resources/fonts/Sofia Sans/static/SofiaSansSemiCondensed-LightItalic.ttf" id="3_me5a8"]
[ext_resource type="Texture2D" uid="uid://kx0xafoc11s1" path="res://sprites/handbook/ui_handbook.png" id="3_muvuh"]
[ext_resource type="FontFile" uid="uid://b6q0wvaf10l3g" path="res://resources/fonts/Micro_5/Micro5-Regular.ttf" id="4_muvuh"]
[ext_resource type="PackedScene" uid="uid://c4lbn3qb8quya" path="res://scripts/ui/sliding_button.tscn" id="5_u6lt1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u6lt1"]
atlas = ExtResource("3_muvuh")
region = Rect2(54, 9, 14, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_me5a8"]
atlas = ExtResource("3_muvuh")
region = Rect2(0, 0, 29, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhx5y"]
atlas = ExtResource("3_muvuh")
region = Rect2(0, 27, 29, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfisd"]
atlas = ExtResource("3_muvuh")
region = Rect2(32, 9, 16, 30)

[node name="Handbook" type="Control"]
light_mask = 0
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_805rs")
title_color = Color(0.690196, 0.454902, 0.313726, 1)
metadata/_edit_use_anchors_ = true

[node name="Paper" type="TextureRect" parent="."]
unique_name_in_owner = true
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -78.5
offset_right = 144.5
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_805rs")

[node name="RichTextLabel" type="RichTextLabel" parent="Paper"]
modulate = Color(0.58, 0.564437, 0.4466, 1)
layout_mode = 1
anchors_preset = -1
offset_left = 32.0
offset_top = 16.0
offset_right = 133.0
offset_bottom = 131.0
theme_override_colors/default_color = Color(0.835294, 0.737255, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("3_me5a8")
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Paper"]
modulate = Color(0.58, 0.564437, 0.4466, 1)
layout_mode = 1
anchors_preset = -1
offset_left = 158.0
offset_top = 17.0
offset_right = 259.0
offset_bottom = 132.0
theme_override_colors/default_color = Color(0.835294, 0.737255, 0.537255, 1)
theme_override_fonts/normal_font = ExtResource("3_me5a8")
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
z_index = -1
layout_mode = 0
offset_left = 270.0
offset_top = 3.0
offset_right = 284.0
offset_bottom = 33.0
texture_normal = SubResource("AtlasTexture_u6lt1")

[node name="SlidingButton" parent="ExitButton" node_paths=PackedStringArray("button") instance=ExtResource("5_u6lt1")]
button = NodePath("..")
to_position = Vector2(0, -2)
time = 0.2

[node name="PrevButton" type="TextureButton" parent="."]
z_index = -1
layout_mode = 0
offset_left = 4.0
offset_top = 94.0
offset_right = 33.0
offset_bottom = 125.0
texture_normal = SubResource("AtlasTexture_me5a8")

[node name="NextButton" type="TextureButton" parent="."]
light_mask = 0
z_index = -1
layout_mode = 0
offset_left = 288.0
offset_top = 94.0
offset_right = 317.0
offset_bottom = 125.0
texture_normal = SubResource("AtlasTexture_dhx5y")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = -1
layout_mode = 0
offset_left = 251.0
offset_top = 5.0
offset_right = 267.0
offset_bottom = 35.0
texture_normal = SubResource("AtlasTexture_nfisd")

[node name="PageCounts" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PageCount1" type="Label" parent="PageCounts"]
layout_mode = 0
offset_left = 42.0
offset_top = 139.0
offset_right = 47.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0.792157, 0.658824, 0.509804, 1)
theme_override_fonts/font = ExtResource("4_muvuh")
theme_override_font_sizes/font_size = 15
text = "1"

[node name="PageCount2" type="Label" parent="PageCounts"]
layout_mode = 0
offset_left = 276.0
offset_top = 139.0
offset_right = 281.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0.792157, 0.658824, 0.509804, 1)
theme_override_fonts/font = ExtResource("4_muvuh")
theme_override_font_sizes/font_size = 15
text = "1"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
